--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.fondoblanco</groupId>
 	<artifactId>fondoblanco</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>fondoblanco</name>
 	<description>Liquor store API</description>
 	<properties>
